--- a/acxi.1
+++ b/acxi.1
@@ -130,9 +130,9 @@ This help menu.
 .B \-i [flac|raw|shn|wav]\fR, \fB\-\-input [flac|raw|shn|wav]\fR
 Input type. Supported types: flac, wav, raw, shn. 
 
-raw/shn/wav \- only support flac output. 
+\fBraw/shn/wav\fR \- only support flac output. 
 
-shn \- requires the shorten codec, which you usually have to build yourself 
+\fBshn\fR \- requires the shorten codec, which you usually have to build yourself 
 unless you can find a package for it. Use \fB\-\-log 3\fR to test the 
 first time to make sure you have shorten codec installed.
 
@@ -142,13 +142,13 @@ Dynamically set LOG_LEVEL. Helps for debugging certain types of issues
 where you might want to see the full level 3 debugging information from
 audio codec conversions for example. 
 
-0 \- shuts off all output except errors. Same as \fB\-\-quiet\fR.
+\fB0\fR \- shuts off all output except errors. Same as \fB\-\-quiet\fR.
 
-1 \- basic single line output. Same as \fB\-\-basic\fR.
+\fB1\fR \- basic single line output. Same as \fB\-\-basic\fR.
 
-2 \- more verbose output. Same as \fB\-\-verbose\fR.
+\fB2\fR \- more verbose output. Same as \fB\-\-verbose\fR.
 
-3 \- full output, incuding all conversion tool output. Same as \fB\-\-full\fR.
+\fB3\fR \- full output, incuding all conversion tool output. Same as \fB\-\-full\fR.
 
 .TP
 .B \-\-nlink\fR
@@ -170,21 +170,21 @@ See \fB\-\-nlink\fR for details.
 .B \-o [flac|mp3|ogg|opus]\fR, \fB\-\-output [flac|mp3|ogg|opus]\fR
 Output type. Supported types: ogg, opus, mp3
 
-mp3 \- only supports flac input type
+\fBmp3\fR \- only supports flac input type
 
-flac \- only supports shn, raw, or wav input types.
+\fBflac\fR \- only supports shn, raw, or wav input types.
 
 .TP
 .B \-q [number]\fR, \fB\-\-quality [number]\fR
 Set compression quality level.
 
-mp3 \- n can be an integer between 0\-9 (variable bit rate), 0 is 
+\fBmp3\fR \- n can be an integer between 0\-9 (variable bit rate), 0 is 
 largest file / highest quality.
 
-ogg \- n can be between \-1 and 10. 10 is the largest file/highest quality. 
+\fBogg\fR \- n can be between \-1 and 10. 10 is the largest file/highest quality. 
 Fractions are allowed, e.g. \fB\-o ogg \-q 7.54\fR
 
-opus \-  n can be an integer between 6\-256 (bitrate). 256 is largest file/highest
+\fBopus\fR \-  n can be an integer between 6\-256 (bitrate). 256 is largest file/highest
 quality.
 
 Note that using a higher or lower quality than you used to create
@@ -239,20 +239,20 @@ in the top comment header of acxi.
 
 The following set your system path for the required applications:
 
-\fBCOMMAND_FLAC\fR Sample: \fBCOMMAND_FLAC=/usr/bin/flac\fR (default path)
+\fBCOMMAND_FLAC\fR \- Sample: \fBCOMMAND_FLAC=/usr/bin/flac\fR (default path)
 
-\fBCOMMAND_FLAC_OUT\fR Sample: \fBCOMMAND_FLAC_OUT=/usr/bin/ffmpeg\fR (default path)
+\fBCOMMAND_FLAC_OUT\fR \- Sample: \fBCOMMAND_FLAC_OUT=/usr/bin/ffmpeg\fR (default path)
 
-\fBCOMMAND_LAME\fR Sample: \fBCOMMAND_LAME=/usr/bin/lame\fR (default path)
+\fBCOMMAND_LAME\fR \- Sample: \fBCOMMAND_LAME=/usr/bin/lame\fR (default path)
 
-\fBCOMMAND_METAFLAC\fR Sample: \fBCOMMAND_METAFLAC=/usr/bin/metaflac\fR 
+\fBCOMMAND_METAFLAC\fR \- Sample: \fBCOMMAND_METAFLAC=/usr/bin/metaflac\fR 
 (default path) Metaflac is required ONLY for flac to mp3, to copy over the 
 ID3 tags If you are not going to make mp3s, only ogg or opus files for output, 
 you do not need this
 
-\fBCOMMAND_OGG\fR Sample: \fBCOMMAND_OGG=/usr/bin/oggenc\fR (default path)
+\fBCOMMAND_OGG\fR \- Sample: \fBCOMMAND_OGG=/usr/bin/oggenc\fR (default path)
 
-\fBCOMMAND_OPUS\fR Sample: \fBCOMMAND_OPUS=/usr/bin/opusenc\fR (default path)
+\fBCOMMAND_OPUS\fR \- Sample: \fBCOMMAND_OPUS=/usr/bin/opusenc\fR (default path)
 
 .TP
 .B SOURCE/DESTINATION/CONFIGURATION DIRECTORIES
@@ -264,13 +264,13 @@ apply cleaning action to your destination directories. Accepted
 values: \fB[enable|on|true|yes]\fR or \fB[disable|off|false|no]\fR. Default
 is false.
 
-\fBSOURCE_DIRECTORY\fR Sample: 
+\fBSOURCE_DIRECTORY\fR \- Sample: 
 
 \fBSOURCE_DIRECTORY=/home/fred/music\fR 
 
 This the original, working, like flac, wav, etc.
 
-\fBDESTINATION_DIRECTORY\fR Sample: 
+\fBDESTINATION_DIRECTORY\fR \- Sample: 
 
 \fBDESTINATION_DIRECTORY=/home/fred/music/ogg\fR
 
@@ -293,25 +293,25 @@ internally.
 
 Changing quality levels will not redo existing files.
 
-\fBINPUT_TYPE\fR Sample: \fBINPUT_TYPE=flac\fR 
+\fBINPUT_TYPE\fR \- Sample: \fBINPUT_TYPE=flac\fR 
 
-\fBOUTPUT_TYPE\fR Sample: \fBOUTPUT_TYPE=mp3\fR 
+\fBOUTPUT_TYPE\fR \- Sample: \fBOUTPUT_TYPE=mp3\fR 
 
-\fBCOPY_TYPES\fR Sample: \fBCOPY_TYPES=doc,docx,bmp,jpg,jpeg\fR Use this
+\fBCOPY_TYPES\fR \- Sample: \fBCOPY_TYPES=doc,docx,bmp,jpg,jpeg\fR Use this
 to override the default file types acxi will sync. Set to 'none', 
 if you only want to sync the music files, not copy over images, text files,
 etc.
 
-\fBQUALITY_FLAC\fR Sample: \fBQUALITY_FLAC=5\fR Supported values: 0\-8. 0 is 
+\fBQUALITY_FLAC\fR \- Sample: \fBQUALITY_FLAC=5\fR Supported values: 0\-8. 0 is 
 the largest file size / fastest to run. NOTE: this is not currently used.
 
-\fBQUALITY_MP3\fR Sample: \fBQUALITY_MP3=2\fR Supported values: 0\-9. 0 is 
+\fBQUALITY_MP3\fR \- Sample: \fBQUALITY_MP3=2\fR Supported values: 0\-9. 0 is 
 the largest file size / highest quality.
 
-\fBQUALITY_OGG\fR Sample: \fBQUALITY_OGG=8.25q\fR Supported values: \-1 to 10. 
+\fBQUALITY_OGG\fR \- Sample: \fBQUALITY_OGG=8.25q\fR Supported values: \-1 to 10. 
 10 is the largest file size / highest quality. Supports fractions.
 
-\fBQUALITY_OPUS\fR Sample: \fBQUALITY_OPUS=256\fR Supported values: 6\-256. 
+\fBQUALITY_OPUS\fR \- Sample: \fBQUALITY_OPUS=256\fR Supported values: 6\-256. 
 256 is the largest file size / highest quality / best bitrate.
 
 .TP
@@ -320,36 +320,36 @@ the largest file size / highest quality.
 The following are advanced options which should only be used if you know
 what you are doing:
 
-\fBDONT_USE_NLINK\fR Sample: \fBDONT_USE_NLINK=0\fR 
+\fBDONT_USE_NLINK\fR \- Sample: \fBDONT_USE_NLINK=0\fR 
 
 This sets \fBFile::Find::dont_use_nlink to \fB0\fR or \fB1\fR. \fB1\fR is 
 default. Generally you should be using \fB1\fR, but in certain cases \fB0\fR 
 may be faster. Test using the \fB\-\-nlink\fR option to disable nlink, and 
 see that option for more information.
 
-\fBFORK\fR Sample: \fBFORK=4\fR 
+\fBFORK\fR \- Sample: \fBFORK=4\fR 
 
 This uses Perl's \fBParallel::ForkManager\fR and accepts values of 0 or more.
 Note that 0 will not create a fork. See \fB\-\-fork\fR for details.
 Using this will speed up your syncing a lot if you have more than a 1 core CPU.
 
 .TP
-.B SCREEN OUTPUT
+.B SCREEN/DEBUGGING OUTPUT
 You can change \fBLOG_LEVEL\fR either at the top of the \fBacxi\fR file itself, 
 or in the configuration file, by setting the verbosity/debugging level to what 
 you want. 
 
 Sample: \fBLOG_LEVEL=3\fR 
 
-0 \- quiet/silent \- no output at all (except for errors).
+\fB0\fR \- quiet/silent \- no output at all (except for errors).
 
-1 \- default \- single line per operation. This is the default, so you don't need 
+\fB1\fR \- default \- single line per operation. This is the default, so you don't need 
 to change it.
     
-2 \- verbose \- but without the actual conversion data from codecs
+\fB2\fR \- verbose \- but without the actual conversion data from codecs
 
-3 \- debug \-  all available information. Note: with \fBF\-\-fork\fR conversion
-output may be ordered somewhat randomly since it shows each thread's results 
+\fB3\fR \- debug \-  all available information. Note: with \fB\-F\fR / \fB\-\-fork\fR 
+conversion output may be ordered somewhat randomly since it shows each thread's results 
 as it completes as well as when it started.
 
 .SH BUGS
