--- a/acxi.1
+++ b/acxi.1
@@ -217,8 +217,7 @@ default. Same as \fB\-\-log 2\fR
 Show acxi version.
 
 .SH CONFIGURATION FILE
-You can see by running \fB\-h\fR if your configuration file locations
-exist. This will show paths being used to locate configuration files.
+You can see by running \fBacxi \-h\fR the configuration file locations.
 
 acxi will read its configuration/initialization files in the
 following order.
