--- a/acxi.1
+++ b/acxi.1
@@ -168,7 +168,7 @@ See \fB\-\-nlink\fR for details.
 
 .TP
 .B \-o [flac|mp3|ogg|opus]\fR, \fB\-\-output [flac|mp3|ogg|opus]\fR
-Output type. Supported types: ogg, opus, mp3
+Output type. Supported types: flac, ogg, opus, mp3
 
 \fBmp3\fR \- only supports flac input type
 
