removed wav from flac only output type

--- a/acxi.1
+++ b/acxi.1
@@ -128,7 +128,7 @@ This help menu.
 .B \-i [flac|raw|shn|wav]\fR, \fB\-\-input [flac|raw|shn|wav]\fR
 Input type. Supported types: flac, wav, raw, shn. 
 
-\fBraw/shn/wav\fR \- only support flac output. 
+\fBraw/shn\fR \- only support flac output. 
 
 \fBshn\fR \- requires the shorten codec, which you usually have to build yourself 
 unless you can find a package for it. Use \fB\-\-log 3\fR to test the 
@@ -170,7 +170,7 @@ Output type. Supported types: flac, ogg, opus, mp3
 
 \fBmp3\fR \- only supports flac input type
 
-\fBflac\fR \- only supports shn, raw, or wav input types.
+\fBflac\fR \- only supports shn, or raw input types.
 
 .TP
 .B \-q [number]\fR, \fB\-\-quality [number]\fR
