--- a/acxi.1
+++ b/acxi.1
@@ -28,6 +28,25 @@ it can be inside of the source directory.
 directories are valid, conversion programs for input and output formatting
 programs are present, and other user values are correct.
 
+.SH DEPENDENCIES
+For backward compatibility, acxi requires only Perl 5.010 (or newer), 
+so it should run on anything. Several features (copy, make directory, 
+find files) were moved from *nix commands to Perl native commands in
+version 3, which should make acxi fully platform agnostic.
+
+* \fBOgg\fR encoding requires \fBoggenc\fR (Debian/Ubuntu package: \fBvorbis-tools\fR).
+
+* \fBOpus\fR encoding requires \fBopusenc\fR (Debian/Ubuntu package: \fBopus-tools\fR).
+
+* \fBMP3\fR encoding requires: \fBlame\fR and \fBflac\fR. Source file must be a flac. 
+  MP3 encoding does not support wav or raw formats).
+  
+* \fBSHN \-> \fBFLAC\fR conversion requires the codec \fBshorten\fR and \fBffmpeg\fR.
+
+In theory, acxi 3.x should run on Windows and Macs, but I have not
+tested that, but as long as the source/destination directory paths and
+the application/configuration paths are correct, it should 'just work'.
+
 .SH USING OPTIONS
 For example:
 .B acxi
@@ -128,11 +147,11 @@ This help menu.
 .B \-i [flac|raw|shn|wav]\fR, \fB\-\-input [flac|raw|shn|wav]\fR
 Input type. Supported types: flac, wav, raw, shn. 
 
-\fBraw/shn\fR \- only support flac output. 
+* \fBraw/shn\fR \- only support flac output. 
 
-\fBshn\fR \- requires the shorten codec, which you usually have to build yourself 
-unless you can find a package for it. Use \fB\-\-log 3\fR to test the 
-first time to make sure you have shorten codec installed.
+* \fBshn\fR \- requires the shorten codec, which you usually have to build yourself 
+  unless you can find a package for it. Use \fB\-\-log 3\fR to test the 
+  first time to make sure you have shorten codec installed.
 
 .TP
 .B \-\-log [0-3]\fR
@@ -140,13 +159,13 @@ Dynamically set LOG_LEVEL. Helps for debugging certain types of issues
 where you might want to see the full level 3 debugging information from
 audio codec conversions for example. 
 
-\fB0\fR \- shuts off all output except errors. Same as \fB\-\-quiet\fR.
+* \fB0\fR \- shuts off all output except errors. Same as \fB\-\-quiet\fR.
 
-\fB1\fR \- basic single line output. Same as \fB\-\-basic\fR.
+* \fB1\fR \- basic single line output. Same as \fB\-\-basic\fR.
 
-\fB2\fR \- more verbose output. Same as \fB\-\-verbose\fR.
+* \fB2\fR \- more verbose output. Same as \fB\-\-verbose\fR.
 
-\fB3\fR \- full output, incuding all conversion tool output. Same as \fB\-\-full\fR.
+* \fB3\fR \- full output, incuding all conversion tool output. Same as \fB\-\-full\fR.
 
 .TP
 .B \-\-nlink\fR
@@ -168,22 +187,22 @@ See \fB\-\-nlink\fR for details.
 .B \-o [flac|mp3|ogg|opus]\fR, \fB\-\-output [flac|mp3|ogg|opus]\fR
 Output type. Supported types: flac, ogg, opus, mp3
 
-\fBmp3\fR \- only supports flac input type
+* \fBmp3\fR \- only supports flac input type
 
-\fBflac\fR \- only supports shn, or raw input types.
+* \fBflac\fR \- only supports shn, or raw input types.
 
 .TP
 .B \-q [number]\fR, \fB\-\-quality [number]\fR
 Set compression quality level.
 
-\fBmp3\fR \- n can be an integer between 0\-9 (variable bit rate), 0 is 
-largest file / highest quality.
+* \fBmp3\fR \- n can be an integer between 0\-9 (variable bit rate), 0 is 
+  largest file / highest quality.
 
-\fBogg\fR \- n can be between \-1 and 10. 10 is the largest file/highest quality. 
-Fractions are allowed, e.g. \fB\-o ogg \-q 7.54\fR
+* \fBogg\fR \- n can be between \-1 and 10. 10 is the largest file/highest quality. 
+  Fractions are allowed, e.g. \fB\-o ogg \-q 7.54\fR
 
-\fBopus\fR \-  n can be an integer between 6\-256 (bitrate). 256 is largest file/highest
-quality.
+* \fBopus\fR \-  n can be an integer between 6\-256 (bitrate). 256 is largest file/highest
+  quality.
 
 Note that using a higher or lower quality than you used to create
 the compressed files will not result in redoing those files unless 
@@ -248,37 +267,37 @@ in the top comment header of acxi.
 .B APPLICATION PATHS
 The following set your system path for the required applications:
 
-\fBCOMMAND_FLAC\fR \- Sample: \fBCOMMAND_FLAC=/usr/bin/flac\fR (default path)
+* \fBCOMMAND_FLAC\fR \- Sample: \fBCOMMAND_FLAC=/usr/bin/flac\fR (default path)
 
-\fBCOMMAND_FLAC_OUT\fR \- Sample: \fBCOMMAND_FLAC_OUT=/usr/bin/ffmpeg\fR (default path)
+* \fBCOMMAND_FLAC_OUT\fR \- Sample: \fBCOMMAND_FLAC_OUT=/usr/bin/ffmpeg\fR (default path)
 
-\fBCOMMAND_LAME\fR \- Sample: \fBCOMMAND_LAME=/usr/bin/lame\fR (default path)
+* \fBCOMMAND_LAME\fR \- Sample: \fBCOMMAND_LAME=/usr/bin/lame\fR (default path)
 
-\fBCOMMAND_METAFLAC\fR \- Sample: \fBCOMMAND_METAFLAC=/usr/bin/metaflac\fR 
-(default path) Metaflac is required ONLY for flac to mp3, to copy over the 
-ID3 tags If you are not going to make mp3s, only ogg or opus files for output, 
-you do not need this
+* \fBCOMMAND_METAFLAC\fR \- Sample: \fBCOMMAND_METAFLAC=/usr/bin/metaflac\fR 
+  (default path) Metaflac is required ONLY for flac to mp3, to copy over the 
+  ID3 tags If you are not going to make mp3s, only ogg or opus files for output, 
+  you do not need this
 
-\fBCOMMAND_OGG\fR \- Sample: \fBCOMMAND_OGG=/usr/bin/oggenc\fR (default path)
+* \fBCOMMAND_OGG\fR \- Sample: \fBCOMMAND_OGG=/usr/bin/oggenc\fR (default path)
 
-\fBCOMMAND_OPUS\fR \- Sample: \fBCOMMAND_OPUS=/usr/bin/opusenc\fR (default path)
+* \fBCOMMAND_OPUS\fR \- Sample: \fBCOMMAND_OPUS=/usr/bin/opusenc\fR (default path)
 
 .TP
 .B SOURCE/DESTINATION/CONFIGURATION DIRECTORIES
 NOTE: \fBDESTINATION_DIRECTORY\fR cannot be the same as \fBSOURCE_DIRECTORY\fR.
 
-\fBCLEAN\fR \- Sample: \fBCLEAN=true\fR Switches on/off \fB\-\-clean\fR to 
-apply cleaning action to your destination directories. Accepted
-values: \fB[enable|on|true|yes]\fR or \fB[disable|off|false|no]\fR. Default
-is false.
+* \fBCLEAN\fR \- Sample: \fBCLEAN=true\fR Switches on/off \fB\-\-clean\fR to 
+  apply cleaning action to your destination directories. Accepted
+  values: \fB[enable|on|true|yes]\fR or \fB[disable|off|false|no]\fR. Default
+  is false.
 
-\fBSOURCE_DIRECTORY\fR \- Sample: 
-\fBSOURCE_DIRECTORY=/home/fred/music\fR 
+* \fBSOURCE_DIRECTORY\fR \- Sample: 
+* \fBSOURCE_DIRECTORY=/home/fred/music\fR 
 
 This the original, working, like flac, wav, etc.
 
-\fBDESTINATION_DIRECTORY\fR \- Sample: 
-\fBDESTINATION_DIRECTORY=/home/fred/music/ogg\fR
+* \fBDESTINATION_DIRECTORY\fR \- Sample: 
+* \fBDESTINATION_DIRECTORY=/home/fred/music/ogg\fR
 
 This is the processed compressed music files, ie, ogg, opus, or mp3. Destination 
 cannot be the same as Source directory, although it can be inside of the source 
@@ -292,44 +311,42 @@ internally.
 
 Changing quality levels will not redo existing files.
 
-\fBINPUT_TYPE\fR \- Sample: \fBINPUT_TYPE=flac\fR 
+* \fBINPUT_TYPE\fR \- Sample: \fBINPUT_TYPE=flac\fR 
 
-\fBOUTPUT_TYPE\fR \- Sample: \fBOUTPUT_TYPE=mp3\fR 
+* \fBOUTPUT_TYPE\fR \- Sample: \fBOUTPUT_TYPE=mp3\fR 
 
-\fBCOPY_TYPES\fR \- Sample: \fBCOPY_TYPES=doc,docx,bmp,jpg,jpeg\fR Use this
-to override the default file types acxi will sync. Set to 'none', 
-if you only want to sync the music files, not copy over images, text files,
-etc.
+* \fBCOPY_TYPES\fR \- Sample: \fBCOPY_TYPES=doc,docx,bmp,jpg,jpeg\fR Use this
+  to override the default file types acxi will sync. Set to 'none', 
+  if you only want to sync the music files, not copy over images, text files,
+  etc.
 
-\fBQUALITY_FLAC\fR \- Sample: \fBQUALITY_FLAC=5\fR Supported values: 0\-8. 0 is 
-the largest file size / fastest to run. NOTE: this is not currently used.
+* \fBQUALITY_FLAC\fR \- Sample: \fBQUALITY_FLAC=5\fR Supported values: 0\-8. 0 is 
+  the largest file size / fastest to run. NOTE: this is not currently used.
 
-\fBQUALITY_MP3\fR \- Sample: \fBQUALITY_MP3=2\fR Supported values: 0\-9. 0 is 
-the largest file size / highest quality.
+* \fBQUALITY_MP3\fR \- Sample: \fBQUALITY_MP3=2\fR Supported values: 0\-9. 0 is 
+  the largest file size / highest quality.
 
-\fBQUALITY_OGG\fR \- Sample: \fBQUALITY_OGG=8.25q\fR Supported values: \-1 to 10. 
-10 is the largest file size / highest quality. Supports fractions.
+* \fBQUALITY_OGG\fR \- Sample: \fBQUALITY_OGG=8.25q\fR Supported values: \-1 to 10. 
+  10 is the largest file size / highest quality. Supports fractions.
 
-\fBQUALITY_OPUS\fR \- Sample: \fBQUALITY_OPUS=256\fR Supported values: 6\-256. 
-256 is the largest file size / highest quality / best bitrate.
+* \fBQUALITY_OPUS\fR \- Sample: \fBQUALITY_OPUS=256\fR Supported values: 6\-256. 
+  256 is the largest file size / highest quality / best bitrate.
 
 .TP
 .B ADVANCED
 The following are advanced options which should only be used if you know
 what you are doing:
 
-\fBDONT_USE_NLINK\fR \- Sample: \fBDONT_USE_NLINK=0\fR 
+* \fBDONT_USE_NLINK\fR \- Sample: \fBDONT_USE_NLINK=0\fR 
+  This sets \fBFile::Find::dont_use_nlink to \fB0\fR or \fB1\fR. \fB1\fR is 
+  default. Generally you should be using \fB1\fR, but in certain cases \fB0\fR 
+  may be faster. Test using the \fB\-\-nlink\fR option to disable nlink, and 
+  see that option for more information.
 
-This sets \fBFile::Find::dont_use_nlink to \fB0\fR or \fB1\fR. \fB1\fR is 
-default. Generally you should be using \fB1\fR, but in certain cases \fB0\fR 
-may be faster. Test using the \fB\-\-nlink\fR option to disable nlink, and 
-see that option for more information.
-
-\fBFORK\fR \- Sample: \fBFORK=4\fR 
-
-This uses Perl's \fBParallel::ForkManager\fR and accepts values of 0 or more.
-Note that 0 will not create a fork. See \fB\-\-fork\fR for details.
-Using this will speed up your syncing a lot if you have more than a 1 core CPU.
+* \fBFORK\fR \- Sample: \fBFORK=4\fR 
+  This uses Perl's \fBParallel::ForkManager\fR and accepts values of 0 or more.
+  Note that 0 will not create a fork. See \fB\-\-fork\fR for details.
+  Using this will speed up your syncing a lot if you have more than a 1 core CPU.
 
 .TP
 .B SCREEN/DEBUGGING OUTPUT
@@ -339,16 +356,16 @@ you want.
 
 Sample: \fBLOG_LEVEL=3\fR 
 
-\fB0\fR \- quiet/silent \- no output at all (except for errors).
+* \fB0\fR \- quiet/silent \- no output at all (except for errors).
 
-\fB1\fR \- default \- single line per operation. This is the default, so you don't need 
-to change it.
+* \fB1\fR \- default \- single line per operation. This is the default, so you don't need 
+  to change it.
     
-\fB2\fR \- verbose \- but without the actual conversion data from codecs
+* \fB2\fR \- verbose \- but without the actual conversion data from codecs
 
-\fB3\fR \- debug \-  all available information. Note: with \fB\-F\fR / \fB\-\-fork\fR 
-conversion output may be ordered somewhat randomly since it shows each thread's results 
-as it completes as well as when it started.
+* \fB3\fR \- debug \-  all available information. Note: with \fB\-F\fR / \fB\-\-fork\fR 
+  conversion output may be ordered somewhat randomly since it shows each thread's results 
+  as it completes as well as when it started.
 
 .SH BUGS
 Please report bugs using the following resources.
