--- a/acxi.1
+++ b/acxi.1
@@ -1,13 +1,13 @@
-.TH ACXI 1 "2019\-07\-15" acxi "acxi manual"
+.TH ACXI 1 "2019\-07\-18" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
 \fBacxi\fR [\fB\-a\fR extensions] [\fB\-\-basic\fR] [\fB\-\-clean\fR] 
 [\fB\-c\fR extensions] [\fB\-\-full\fR]  [\fB\-d\fR destination-path] 
-[\fB\-f\fR] [\fB\-\-fork\fR 0-xx] [\fB\-h\fR] [\fB\-i\fR flac|raw|shn|wave] 
-[\fB\-\-log\fR 0-3] [\fB\-\-nlink\fR] [\fB\-\-no\-nlink\fR] 
-[\fB\-o\fR flac|mp3|ogg|opus] [\fB\-q\fR 0-xxx] [\fB\-\-quiet\fR] 
-[\fB\-s\fR source-path] [\fB\-V\fR] [\fB\-\-test\fR] [\fB\-v\fR]
+[\fB\-f\fR] [\fB\-\-fork\fR 0-xx] [\fB\-h\fR] [\fB\-i\fR {flac|raw|shn|wave}] 
+[\fB\-\-log\fR {0-3}] [\fB\-\-nlink\fR] [\fB\-\-no\-nlink\fR] 
+[\fB\-o\fR {flac|mp3|ogg|opus}] [\fB\-q\fR NUMBER] [\fB\-\-quiet\fR] 
+[\fB\-s\fR source\-path] [\fB\-V\fR] [\fB\-\-test\fR] [\fB\-v\fR]
 
 .SH DESCRIPTION
 \fBacxi\fR is a command line audio conversion program. It converts and syncs
