--- a/acxi.1
+++ b/acxi.1
@@ -81,7 +81,7 @@ Same as \fB\-\-log 1\fR
 
 .TP
 .B \-\-checksum\fR
-Create \fB.ffp and \fB.md5 checksum files in your source directory.
+Create \fB.ffp\fR and \fB.md5\fR checksum files in your source directory.
 Checksum files are only created inside directories where flac
 files are found. Use with \fB\-\-checksum\-delete\fR to delete existing
 checksum files. Only flac input type is supported.
