Cleanup, changelog update for --checksum/--checksum-delete. Refactored more code, made logic easier to read and follow, and work on hopefully.

--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2019\-07\-19" acxi "acxi manual"
+.TH ACXI 1 "2019\-07\-21" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -297,7 +297,7 @@ section because that is what it will use to locate the configuration file.
 acxi will look for acxi.conf inside that directory. 
 
 .SH CONFIGURATION OPTIONS
-The following corresponds to the \fBBEGIN USER MODIFIABLE VALUES\fR section
+The following corresponds to the \fBUSER MODIFIABLE VALUES\fR section
 in the top comment header of acxi.
 
 .TP
