--autotag-create updates

--- a/acxi.1
+++ b/acxi.1
@@ -405,6 +405,9 @@ occur in any other context in your music collection files.
 directory you want to be autotagged. See github acxi page for a sample copy.
 This file contains all the tagging information following a pre-defined format.
 
+Can be generated as well using \fB\-\-autotag\-create\fR when given the 
+directorysource path.
+
 .TP
 .B CHECKSUMS
 These only apply to the \fB\-\-checksum\fR option, and set a different name 
