--- a/acxi.1
+++ b/acxi.1
@@ -59,7 +59,7 @@ and \fBmd5sum\fR (or any comparable program that generates md5sums).
 Md5 generating logic may be moved to straight Perl to remove the md5 
 program requirement.
 
-\fB\-U\fR Self-updater requires \fBcurl\fR. BSD and GNU/Linux only.
+\fB\-U\fR Self-updater requires \fBcurl\fR. 
 
 In theory, acxi 3.x should run on Windows and Macs, but I have not
 tested that, but as long as the source/destination directory paths and
